updating default and varying drag configs

--- a/code/configs/default.yml
+++ b/code/configs/default.yml
@@ -1,5 +1,7 @@
+# meta
+verbose: true
 # masses on springs with varying drag, c
-models: "both"
+models: ["lupi","nopi"]
 use_saved_models: true
 saved_models: ["lupi_varying_drag","nopi_varying_drag"]
 # data
@@ -7,10 +9,15 @@ use_saved_data: true
 saved_train: "varying_drag_train" 
 saved_val: "varying_drag_validation"
 saved_eval: "varying_drag_evaluation"
+simulator:
+  dt: 0.01
+  sampling_freq : 20
+  samples : 50
 # evaluation
 z_samples : 32
 context_range : [5,10]
 target_range : [15,51]
 mse : true
 calibration : true
+calibration_bins : 32
 sharpness : true
